--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@uiw/react-textarea-code-editor": "^3.0.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-icons": "^5.3.0",
         "react-p5-wrapper": "^4.1.2",
         "react-resizable-panels": "^2.1.3",
         "react-resize-detector": "^11.0.1",
