--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@4lexdel/maze-generator": "^1.0.3",
         "@monaco-editor/react": "^4.6.0",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.108",
